doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/Users/zecarlos/Downloads/BlueJ 3.1.4/BlueJ.app/Contents/Frameworks/jdk.framework/Versions/A/Contents/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/Users/zecarlos/Downloads/BlueJ 3.1.4/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/Users/zecarlos/Downloads/BlueJ 3.1.4/BlueJ.app/Contents/Resources/Java/junit-4.8.2.jar:/Users/zecarlos/Downloads/BlueJ 3.1.4/BlueJ.app/Contents/Resources/Java/userlib/pi4j-core.jar:/Users/zecarlos/Downloads/BlueJ 3.1.4/BlueJ.app/Contents/Resources/Java/userlib/pi4j-device.jar:/Users/zecarlos/Downloads/BlueJ 3.1.4/BlueJ.app/Contents/Resources/Java/userlib/pi4j-gpio-extension.jar:/Users/zecarlos/Downloads/BlueJ 3.1.4/BlueJ.app/Contents/Resources/Java/userlib/pi4j-service.jar:/Users/zecarlos/Desktop/GeoCachingPOO
-d
/Users/zecarlos/Desktop/GeoCachingPOO/doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
/Users/zecarlos/Downloads/BlueJ 3.1.4/BlueJ.app/Contents/Resources/Java/bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
/Users/zecarlos/Desktop/GeoCachingPOO/Utilizador.java
<---- end of javadoc command ---->
Loading source file /Users/zecarlos/Desktop/GeoCachingPOO/Utilizador.java...
Constructing Javadoc information...
/Users/zecarlos/Desktop/GeoCachingPOO/Utilizador.java:29: error: cannot find symbol
    public ArrayList<Actividades> actividades;/**As estatísticas dos seus registos nos diversos tipos de cache.*/
                     ^
  symbol:   class Actividades
  location: class Utilizador
/Users/zecarlos/Desktop/GeoCachingPOO/Utilizador.java:30: error: cannot find symbol
    public ArrayList<Estatísticas> estatisticas;/**A informação das actividades que realizou.*/
                     ^
  symbol:   class Estatísticas
  location: class Utilizador
/Users/zecarlos/Desktop/GeoCachingPOO/Utilizador.java:31: error: cannot find symbol
 	public ArrayList<Amigo> amigos;/**E o conjunto dos utilizadores que pertencem á sua rede de amigos.*/
 	                 ^
  symbol:   class Amigo
  location: class Utilizador
Standard Doclet version 1.8.0_20
Building tree for all the packages and classes...
Generating /Users/zecarlos/Desktop/GeoCachingPOO/doc/Utilizador.html...
Generating /Users/zecarlos/Desktop/GeoCachingPOO/doc/package-frame.html...
Generating /Users/zecarlos/Desktop/GeoCachingPOO/doc/package-summary.html...
Generating /Users/zecarlos/Desktop/GeoCachingPOO/doc/constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating /Users/zecarlos/Desktop/GeoCachingPOO/doc/allclasses-frame.html...
Generating /Users/zecarlos/Desktop/GeoCachingPOO/doc/allclasses-noframe.html...
Generating /Users/zecarlos/Desktop/GeoCachingPOO/doc/index.html...
Generating /Users/zecarlos/Desktop/GeoCachingPOO/doc/stylesheet.css...
3 warnings
